[project]
name = "diabest-backend"
version = "0.1.0"
description = "FastAPI backend for Diabest application"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (==0.111.0)",
    "uvicorn (==0.30.1)",
    "tensorflow (==2.16.1)",
    "pillow (==10.3.0)",
    "numpy (==1.26.4)",
    "opencv-python (==4.9.0.80)",
    "python-multipart (==0.0.9)"
]

[tool.poetry] # <--- ADDED THIS SECTION
package-mode = false # <--- ADDED THIS LINE

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
